<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/general_game_settings_title" >
        <CheckBoxPreference
            android:defaultValue="@bool/computer_play_first_default_setting"
            android:key="computer_play_first"
            android:persistent="true"
            android:summary="@string/computer_plays_first_settings_summary"
            android:title="@string/computer_plays_first_settings_title" />

        <ListPreference
            android:defaultValue="@string/player_piece_default_setting"
            android:dialogTitle="@string/player_piece_settings_dialog_title"
            android:entries="@array/player_piece_entries"
            android:entryValues="@array/player_piece_entryValues"
            android:key="players_piece"
            android:persistent="true"
            android:title="@string/player_piece_settings_title" />
    </PreferenceCategory>

</PreferenceScreen>